@@ -1,3 +1,7 @@
+2006-07-22  Ivan N. Zlatev  <contact i-nZ.net>
+
+	* src/XinePlayerEngine.cs: Fix SetEqualizerGain behaviour.
+	
 2006-07-18  Ivan N. Zlatev  <contact i-nZ.net>
 
 	* src/Xine.cs: Implemented equalizer support.
